--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
         }
     ],
     "require": {
+        "php": "^7.3|^8.0",
+        "ext-pdo": "*",
+        "ext-curl": "*",
+        "ext-json": "*",
+        "ext-mbstring": "*",
         "longman/telegram-bot": "*"
     }
 }
