--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,14 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "longman/telegram-bot": "*"
+    },
+    
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+
+    "autoload": {
+        "psr-4": {
+        "Bot\\": "src\\Bot\\"
+    }
     }
 }
