--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {},
-
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Bot\\": "src\\Bot\\"
