--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,9 @@
         }
     ],
     "require": {},
-    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "Projkin\\TelegramBot\\": "*"
+            "TelegramBot\\": "src\\"
         }
     }
 }
