--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,13 @@
         }
     ],
     "require": {},
+
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    
     "autoload": {
         "psr-4": {
-            "Projkin\\TeleBot\\": "src\\"
+            "Projkin\\TeleBot\\": "src\\TeleBot"
         }
     }
 }
